# ontologAI

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml
src/: chat.rs  main.rs  requests.rs  templates.rs  utils.rs
templates/: index.html  ontology_display.html  test.html
